--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <a href="/#/stories" class="skip-link">Skip to content</a>
+    <a href="#main-content" class="skip-link">Skip to content</a>
     <app-bar></app-bar>
     <!-- <main id="main-content" tabindex="-1"></main> -->
     <!-- Atau -->
