--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
-    <app-bar></app-bar>
+    <header>
+      <app-bar></app-bar>
+    </header>
     <!-- <main id="main-content" tabindex="-1"></main> -->
     <!-- Atau -->
     <main id="main-content" class="main-content" tabindex="-1"></main>
